# simple-catcher

./: .gitmodules  CMakeLists.txt  main.cpp
objects/: TexturedSprite.cpp  TexturedSprite.hpp
utils/: utils.cpp  utils.hpp
